<resources>
    <string name="app_name">Tip Calculator</string>

    <string name="zero_currency" translatable="false">0</string>
    <string name="default_percent" translatable="false">15</string>
    <string name="default_split" translatable="false">1</string>
    
    <!--Menu Items-->
    <string name="action_set_default_percent" translatable="true">Set Default Tip %</string>
    <string name="action_reset_tip_percent" translatable="true">Reset Tip %</string>

    <!--Settings keys-->
    <string name="settings_tip_percent_key" translatable="true">tip_percent</string>

    <!--Settings labels-->
    <string name="settings_title">Settings</string>
    <string name="settings_tip_percent_label" translatable="true">Tip %</string>

    <!--Labels-->
    <string name="label_bill">Bill</string>
    <string name="label_tip_percentage">Tip %</string>
    <string name="label_tip_total">Tip Total</string>
    <string name="label_round_total">Round Total</string>
    <string name="label_split">Split</string>
    <string name="label_total">Total</string>
    <string name="label_total_per_person">Per Person</string>
    <string name="label_remainder">Remainder</string>


    <!--Button Labels-->
    <string name="button_round_down">Down</string>
    <string name="button_round_up">Up</string>
    <string name="button_increase" translatable="false">+</string>
    <string name="button_decrease" translatable="false">-</string>

    <!-- Toast message when user enters a number that is too large [CHAR LIMIT=30] -->
    <string name="large_number_error_toast">Error: number is too large</string>

    <!--Donation page-->
    <string name="action_donate">Donate to Developer</string>
    <string name="donate_title">Donate</string>
    <string name="donate_greeting">Hello!</string>
    <string name="donate_message">My name is Amanda. If you are enjoying this app I developed,
        please consider purchasing my donation app.\n\nThe donation app does not do anything,
        but your donation will show me that my time spent developing free, no-ads apps is appreciated. Thanks!</string>
    <string name="play_store_direct_link_blue" translatable="false">market://details?id=com.amandafarrell.www.donationfordeveloper_blue</string>
    <string name="play_store_browser_link_blue" translatable="false">https://play.google.com/store/apps/details?id=com.amandafarrell.www.donationfordeveloper_blue</string>
    <string name="play_store_direct_link_red" translatable="false">market://details?id=com.amandafarrell.www.donationfordeveloperred</string>
    <string name="play_store_browser_link_red" translatable="false">https://play.google.com/store/apps/details?id=com.amandafarrell.www.donationfordeveloperred</string>
    <string name="play_store_direct_link_black" translatable="false">market://details?id=com.amandafarrell.www.donationfordeveloperblack</string>
    <string name="play_store_browser_link_black" translatable="false">https://play.google.com/store/apps/details?id=com.amandafarrell.www.donationfordeveloperblack</string>
    <string name="small">Small</string>
    <string name="medium">Medium</string>
    <string name="large">Large</string>

</resources>
