<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <TableLayout
            android:id="@+id/table"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <!--Bill-->
            <TableRow>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:labelFor="@id/bill"
                    android:text="@string/label_bill"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                <Button
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:visibility="invisible" />

                <EditText
                    android:id="@+id/bill"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:imeOptions="actionDone"
                    android:inputType="number"
                    android:minWidth="48dp"
                    android:text="@string/zero_currency" />

                <requestFocus />
            </TableRow>

            <!--Tip Percent-->
            <TableRow>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:labelFor="@id/tip_percent"
                    android:text="@string/label_tip_percentage"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                <Button
                    android:id="@+id/button_decrease_tip_percent"
                    android:layout_width="40dp"
                    android:layout_height="44dp"
                    android:text="@string/button_decrease"
                    android:textColor="@android:color/white" />

                <TextView
                    android:id="@+id/tip_percent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:minWidth="14dp"
                    android:text="@string/default_percent"
                    android:textColor="@android:color/black"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/button_increase_tip_percent"
                    android:layout_width="40dp"
                    android:layout_height="44dp"
                    android:text="@string/button_increase"
                    android:textColor="@android:color/white" />

            </TableRow>

            <!--Tip Total-->
            <TableRow>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:labelFor="@id/tip_total"
                    android:text="@string/label_tip_total"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                <Button
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:visibility="invisible" />

                <EditText
                    android:id="@+id/tip_total"
                    android:layout_width="16dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:imeOptions="actionDone"
                    android:inputType="number"
                    android:minWidth="48dp"
                    android:text="@string/zero_currency" />
            </TableRow>

            <!--Round Total-->
            <TableRow>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/label_round_total"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                <Button
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:visibility="invisible" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center">

                    <Button
                        android:id="@+id/button_round_up"
                        android:layout_width="48dp"
                        android:layout_height="40dp"
                        android:drawableStart="@drawable/ic_arrow_upward" />

                    <Button
                        android:id="@+id/button_round_down"
                        android:layout_width="48dp"
                        android:layout_height="40dp"
                        android:drawableStart="@drawable/ic_arrow_downward" />
                </LinearLayout>

            </TableRow>

            <!--Split-->
            <TableRow>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:labelFor="@id/split"
                    android:text="@string/label_split"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                <Button
                    android:id="@+id/button_decrease_split"
                    android:layout_width="40dp"
                    android:layout_height="44dp"
                    android:gravity="center"
                    android:text="@string/button_decrease"
                    android:textColor="@android:color/white" />

                <EditText
                    android:id="@+id/split"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:imeOptions="actionDone"
                    android:inputType="number"
                    android:minWidth="48dp"
                    android:text="@string/default_split" />

                <Button
                    android:id="@+id/button_increase_split"
                    android:layout_width="40dp"
                    android:layout_height="44dp"
                    android:text="@string/button_increase"
                    android:textColor="@android:color/white" />
            </TableRow>

            <!--Total-->
            <TableRow>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:labelFor="@id/total"
                    android:text="@string/label_total"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                <Button
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:visibility="invisible" />

                <TextView
                    android:id="@+id/total"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:minWidth="56dp"
                    android:text="@string/zero_currency"
                    android:textAppearance="?android:textAppearanceLarge"
                    android:textStyle="bold" />
            </TableRow>

            <!--Total per person-->
            <TableRow>

                <TextView
                    android:id="@+id/label_per_person"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:labelFor="@id/total_per_person"
                    android:paddingTop="16dp"
                    android:text="@string/label_total_per_person"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                <Button
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:visibility="invisible" />

                <TextView
                    android:id="@+id/total_per_person"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:minWidth="56dp"
                    android:text="@string/zero_currency"
                    android:textAppearance="?android:textAppearanceLarge"
                    android:textStyle="bold" />
            </TableRow>

        </TableLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>